remove items api and handler impl, make openai api keys loaded from .env, update subjects api formatted data to include subject relations
