# src/internal/openapi/handlers.go
@@ -13,18 +13,18 @@ import (
 	"example-server/internal/repos"
 )
 
-type ItemsService struct {
+type LLMKGService struct {
 	Deps *dependencies.Dependencies
 }
 
-func (s *ItemsService) NewError(ctx context.Context, err error) *ogen.ErrorResponseStatusCode {
+func (s *LLMKGService) NewError(ctx context.Context, err error) *ogen.ErrorResponseStatusCode {
 	return &ogen.ErrorResponseStatusCode{
 		StatusCode: http.StatusInternalServerError,
 		Response:   ogen.ErrorResponse{Error: err.Error()},
 	}
 }
 
-func (s *ItemsService) Ping(
+func (s *LLMKGService) Ping(
 	ctx context.Context,
 ) (*ogen.PingResponse, error) {
 	log.Info().Msg("Handling ping request")
@@ -33,131 +33,7 @@ func (s *ItemsService) Ping(
 	}, nil
 }
 
-func (s *ItemsService) CreateItem(
-	ctx context.Context,
-	req *ogen.ItemCreateRequest,
-) (ogen.CreateItemRes, error) {
-	log.Info().Interface("ItemCreateRequest", req).Msg("Handling item create request")
-	// Insert item
-	itemIn := req.Data
-	item, err := repos.InsertItem(s.Deps.DBPool, models.ItemIn{
-		Name:  itemIn.Name,
-		Price: itemIn.Price,
-	})
-	if err != nil {
-		log.Error().Err(err).Interface("ItemCreateRequest", req).Msg("Error inserting item")
-		return nil, s.NewError(ctx, err)
-	}
-	log.Debug().Interface("item", item).Msg("Item created")
-	// Convert models.Item to ogen.Item
-	itemOut := ogen.Item{
-		ID:        int64(item.ID),
-		UUID:      uuid.MustParse(item.UUID),
-		CreatedAt: item.CreatedAt,
-		Name:      item.Name,
-		Price:     item.Price,
-	}
-	// Compose and return response
-	return &ogen.ItemCreateResponse{
-		Data: itemOut,
-		Meta: ogen.ItemMeta{
-			ItemStatus: ogen.OptItemMetaItemStatus{
-				Value: ogen.ItemMetaItemStatusCreated,
-				Set:   true,
-			},
-		},
-	}, nil
-}
-
-func (s *ItemsService) GetItem(
-	ctx context.Context,
-	params ogen.GetItemParams,
-) (ogen.GetItemRes, error) {
-	log.Info().Interface("GetItemParams", params).Msg("Handling item get request")
-	// Fetch item
-	itemId := params.ItemId
-	item, err := repos.FetchItemById(s.Deps.DBPool, itemId)
-	if err != nil {
-		log.Error().Err(err).Interface("GetItemParams", params).Msg("Error getting item")
-		return nil, s.NewError(ctx, err)
-	}
-	log.Debug().Interface("item", item).Msg("Item fetched")
-	// Convert models.Item to ogen.Item
-	itemOut := ogen.Item{
-		ID:        int64(item.ID),
-		UUID:      uuid.MustParse(item.UUID),
-		CreatedAt: item.CreatedAt,
-		Name:      item.Name,
-		Price:     item.Price,
-	}
-	// Compose and return response
-	return &ogen.ItemGetResponse{
-		Data: itemOut,
-		Meta: ogen.ItemMeta{
-			ItemStatus: ogen.OptItemMetaItemStatus{
-				Value: ogen.ItemMetaItemStatusFetched,
-				Set:   true,
-			},
-		},
-	}, nil
-}
-
-func (s *ItemsService) UpdateItem(
-	ctx context.Context,
-	req *ogen.ItemUpdateRequest,
-	params ogen.UpdateItemParams,
-) (ogen.UpdateItemRes, error) {
-	log.Info().Interface("ItemUpdateRequest", req).Msg("Handling item update request")
-	// Update item
-	itemId := params.ItemId
-	itemIn := req.Data
-	item, err := repos.UpdateItem(s.Deps.DBPool, itemId, models.ItemIn{
-		Name:  itemIn.Name,
-		Price: itemIn.Price,
-	})
-	if err != nil {
-		log.Error().Err(err).Interface("ItemUpdateRequest", req).Msg("Error updating item")
-		return nil, s.NewError(ctx, err)
-	}
-	log.Debug().Interface("item", item).Msg("Item updated")
-	// Convert models.Item to ogen.Item
-	itemOut := ogen.Item{
-		ID:        int64(item.ID),
-		UUID:      uuid.MustParse(item.UUID),
-		CreatedAt: item.CreatedAt,
-		Name:      item.Name,
-		Price:     item.Price,
-	}
-	// Compose and return response
-	return &ogen.ItemUpdateResponse{
-		Data: itemOut,
-		Meta: ogen.ItemMeta{
-			ItemStatus: ogen.OptItemMetaItemStatus{
-				Value: ogen.ItemMetaItemStatusUpdated,
-				Set:   true,
-			},
-		},
-	}, nil
-}
-
-func (s *ItemsService) DeleteItem(
-	ctx context.Context,
-	params ogen.DeleteItemParams,
-) (ogen.DeleteItemRes, error) {
-	log.Info().Interface("DeleteItemParams", params).Msg("Handling item delete request")
-	// Delete item
-	itemId := params.ItemId
-	item, err := repos.DeleteItem(s.Deps.DBPool, itemId)
-	if err != nil {
-		log.Error().Err(err).Interface("DeleteItemParams", params).Msg("Error deleting item")
-		return nil, s.NewError(ctx, err)
-	}
-	log.Debug().Interface("item", item).Msg("Item deleted")
-	// Return empty response
-	return &ogen.DeleteItemNoContent{}, nil
-}
-
-func (s *ItemsService) CreateSubject(
+func (s *LLMKGService) CreateSubject(
 	ctx context.Context,
 	req *ogen.SubjectCreateRequest,
 ) (ogen.CreateSubjectRes, error) {
@@ -179,10 +55,12 @@ func (s *ItemsService) CreateSubject(
 	log.Debug().Interface("subject", subject).Msg("Subject created")
 	// Convert models.Subject to ogen.Subject
 	subjectOut := ogen.Subject{
-		ID:        int64(subject.ID),
-		UUID:      uuid.MustParse(subject.UUID),
-		CreatedAt: subject.CreatedAt,
-		Name:      subject.Name,
+		ID:                    int64(subject.ID),
+		UUID:                  uuid.MustParse(subject.UUID),
+		CreatedAt:             subject.CreatedAt,
+		Name:                  subject.Name,
+		RelatedToSubjectIds:   []int64{},
+		RelatedFromSubjectIds: []int64{},
 	}
 	// Compose and return response
 	return &ogen.SubjectCreateResponse{
@@ -190,7 +68,7 @@ func (s *ItemsService) CreateSubject(
 	}, nil
 }
 
-func (s *ItemsService) GetSubject(
+func (s *LLMKGService) GetSubject(
 	ctx context.Context,
 	params ogen.GetSubjectParams,
 ) (ogen.GetSubjectRes, error) {
@@ -203,12 +81,34 @@ func (s *ItemsService) GetSubject(
 		return nil, s.NewError(ctx, err)
 	}
 	log.Debug().Interface("subject", subject).Msg("Subject fetched")
+	// Fetch subject relations
+	subjectToRelations, err := repos.FetchSubjectRelationsBySubjectId(s.Deps.DBPool, subjectId)
+	if err != nil {
+		log.Error().Err(err).Interface("GetSubjectParams", params).Msg("Error getting subject relations")
+		return nil, s.NewError(ctx, err)
+	}
+	log.Debug().Interface("subjectToRelations", subjectToRelations).Msg("Subject to relations fetched")
+	subjectFromRelations, err := repos.FetchSubjectRelationsByRelatedSubjectId(s.Deps.DBPool, subjectId)
+	if err != nil {
+		log.Error().Err(err).Interface("GetSubjectParams", params).Msg("Error getting subject relations")
+		return nil, s.NewError(ctx, err)
+	}
+	log.Debug().Interface("subjectFromRelations", subjectFromRelations).Msg("Subject from relations fetched")
 	// Convert models.Subject to ogen.Subject
 	subjectOut := ogen.Subject{
-		ID:        int64(subject.ID),
-		UUID:      uuid.MustParse(subject.UUID),
-		CreatedAt: subject.CreatedAt,
-		Name:      subject.Name,
+		ID:                    int64(subject.ID),
+		UUID:                  uuid.MustParse(subject.UUID),
+		CreatedAt:             subject.CreatedAt,
+		Name:                  subject.Name,
+		RelatedToSubjectIds:   []int64{},
+		RelatedFromSubjectIds: []int64{},
+	}
+	// Compose related subject ids
+	for _, subjectRelation := range subjectToRelations {
+		subjectOut.RelatedToSubjectIds = append(subjectOut.RelatedToSubjectIds, int64(subjectRelation.RelatedSubjectID))
+	}
+	for _, subjectRelation := range subjectFromRelations {
+		subjectOut.RelatedFromSubjectIds = append(subjectOut.RelatedFromSubjectIds, int64(subjectRelation.SubjectID))
 	}
 	// Compose and return response
 	return &ogen.SubjectGetResponse{
@@ -216,7 +116,7 @@ func (s *ItemsService) GetSubject(
 	}, nil
 }
 
-func (s *ItemsService) CreateSubjectRelation(
+func (s *LLMKGService) CreateSubjectRelation(
 	ctx context.Context,
 	req *ogen.SubjectRelationCreateRequest,
 ) (ogen.CreateSubjectRelationRes, error) {
