# src/internal/openapi/ogen/oas_router_gen.go
@@ -61,66 +61,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				break
 			}
 			switch elem[0] {
-			case 'i': // Prefix: "items"
-
-				if l := len("items"); len(elem) >= l && elem[0:l] == "items" {
-					elem = elem[l:]
-				} else {
-					break
-				}
-
-				if len(elem) == 0 {
-					switch r.Method {
-					case "POST":
-						s.handleCreateItemRequest([0]string{}, elemIsEscaped, w, r)
-					default:
-						s.notAllowed(w, r, "POST")
-					}
-
-					return
-				}
-				switch elem[0] {
-				case '/': // Prefix: "/"
-
-					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
-						elem = elem[l:]
-					} else {
-						break
-					}
-
-					// Param: "itemId"
-					// Leaf parameter, slashes are prohibited
-					idx := strings.IndexByte(elem, '/')
-					if idx >= 0 {
-						break
-					}
-					args[0] = elem
-					elem = ""
-
-					if len(elem) == 0 {
-						// Leaf node.
-						switch r.Method {
-						case "DELETE":
-							s.handleDeleteItemRequest([1]string{
-								args[0],
-							}, elemIsEscaped, w, r)
-						case "GET":
-							s.handleGetItemRequest([1]string{
-								args[0],
-							}, elemIsEscaped, w, r)
-						case "PATCH":
-							s.handleUpdateItemRequest([1]string{
-								args[0],
-							}, elemIsEscaped, w, r)
-						default:
-							s.notAllowed(w, r, "DELETE,GET,PATCH")
-						}
-
-						return
-					}
-
-				}
-
 			case 'p': // Prefix: "ping"
 
 				if l := len("ping"); len(elem) >= l && elem[0:l] == "ping" {
@@ -321,80 +261,6 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				break
 			}
 			switch elem[0] {
-			case 'i': // Prefix: "items"
-
-				if l := len("items"); len(elem) >= l && elem[0:l] == "items" {
-					elem = elem[l:]
-				} else {
-					break
-				}
-
-				if len(elem) == 0 {
-					switch method {
-					case "POST":
-						r.name = CreateItemOperation
-						r.summary = ""
-						r.operationID = "createItem"
-						r.pathPattern = "/items"
-						r.args = args
-						r.count = 0
-						return r, true
-					default:
-						return
-					}
-				}
-				switch elem[0] {
-				case '/': // Prefix: "/"
-
-					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
-						elem = elem[l:]
-					} else {
-						break
-					}
-
-					// Param: "itemId"
-					// Leaf parameter, slashes are prohibited
-					idx := strings.IndexByte(elem, '/')
-					if idx >= 0 {
-						break
-					}
-					args[0] = elem
-					elem = ""
-
-					if len(elem) == 0 {
-						// Leaf node.
-						switch method {
-						case "DELETE":
-							r.name = DeleteItemOperation
-							r.summary = ""
-							r.operationID = "deleteItem"
-							r.pathPattern = "/items/{itemId}"
-							r.args = args
-							r.count = 1
-							return r, true
-						case "GET":
-							r.name = GetItemOperation
-							r.summary = "Get Item"
-							r.operationID = "getItem"
-							r.pathPattern = "/items/{itemId}"
-							r.args = args
-							r.count = 1
-							return r, true
-						case "PATCH":
-							r.name = UpdateItemOperation
-							r.summary = "Update Item"
-							r.operationID = "updateItem"
-							r.pathPattern = "/items/{itemId}"
-							r.args = args
-							r.count = 1
-							return r, true
-						default:
-							return
-						}
-					}
-
-				}
-
 			case 'p': // Prefix: "ping"
 
 				if l := len("ping"); len(elem) >= l && elem[0:l] == "ping" {
